--- a/rules.html
+++ b/rules.html
@@ -51,6 +51,7 @@
   </main>
   <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
 <script src="vehicle.js"></script>
 <script src="player.js"></script>
 <script src="zombie.js"></script>
